4/13/21 BN/DB: fixed bug where we couldn't see items after we placed them somewhere else, also made expunge, remove and wear item methods, made pc item methods that needed slots, amde those work, added colors to the menus, added killing spongebob as the win condition
4/13/21 BN/DH: made displays for player inventory and gear, fixed duplication bug, but dropping items now sometimes doesn't display
4/12/21 BN/DH/CB: in pc.cpp we made pc_grab_item that picks up the item and puts it into inv, testing phase for all item management methods, need to fix duping bug with dropping items
4/8/21 BN/DH: Made the no fog show all monsters and items in color
4/7/21 BN/DH: Finished object generation and deallocated the objects after the dungeon is deleted
4/6/21 BN/DH: Made monster generation from vectors and started object generation, added color printing
4/3/21 BN/DH: changed monster generation to be from desc, added monster factory
3/30/21 BN/DH: Finished abilities, desc, added dice and description classes, added print function for parser //1.07 assignment done 
3/29/21 BN/DH/CB: Finished color, damage, hp, and speed. Still need to do description
3/24/21 BN: fixed the bug where you could teleport onto yourself
3/23/21 BN/DH/CB: finished everything for 1.06 (fixed fog of war, fixed teleporting onto a monster, implemented random teleportation) //1.06 assignment done
3/22/21 BN/DH/CB: Worked on telport mechanic, finished targeting mode, sometimes Z's show up in the fog of war mode and we don't know why, also need to fix teleporting onto a monster
3/21/21 CB: Started the teleportation mechanic, just the random.
3/20/21 BN/DH: Changed all .c files (except for heap.c) to .cpp, fixed any errors, added fog of war, added f key, which shows the entire screen
3/11/21 BN: Deleted save and load functions, and added comments to the main game loop