@@ -3,6 +3,7 @@
 
 class dungeon;
 
+int io_target_monster(dungeon *d);
 void io_list_pc_inv(dungeon *d);
 void io_list_pc_wearing(dungeon *d);
 void io_inspect_item(dungeon *d, int slot);
