@@ -1,4 +1,5 @@
-4/13/21 BN/DB: fixed bug where we couldn't see items after we placed them somewhere else, also made expunge, remove and wear item methods, made pc item methods that needed slots, amde those work, added colors to the menus, added killing spongebob as the win condition
+4/14/21 BN/DH: made inspect monster method
+4/13/21 BN/DH: fixed bug where we couldn't see items after we placed them somewhere else, also made expunge, remove and wear item methods, made pc item methods that needed slots, amde those work, added colors to the menus, added killing spongebob as the win condition
 4/13/21 BN/DH: made displays for player inventory and gear, fixed duplication bug, but dropping items now sometimes doesn't display
 4/12/21 BN/DH/CB: in pc.cpp we made pc_grab_item that picks up the item and puts it into inv, testing phase for all item management methods, need to fix duping bug with dropping items
 4/8/21 BN/DH: Made the no fog show all monsters and items in color
